# 3D_MOT

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
evaluation/: box.py  box_util.py  dist_metrics.py  evaluate_kitti3dmot.py  evaluate_node.py  evaluate_tracking.seqmap.val  kitti_oxts.py  requierements.txt  sustech_to_kitti.py
evaluation/label/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt
include/: config.hpp  inference.hpp  tracker.hpp  trajectory.hpp  utils.hpp
launch/: evaluation.launch.py  tracker.launch.py
src/: inference.cpp  inference.py  tracker.cpp  trajectory.cpp  utils.cpp
tracker/: inference.py
tracker_prediction/: 3DMOT.py  inference.py
tracker_prediction/config/online/: centerpoint_mot.yaml
tracker_prediction/tracker/: box_op.py  tracker.py  trajectory.py
